<resources>
    <string name="app_name">FlashCards</string>
    
    <!-- Main Screen -->
    <string name="welcome_message">Welcome to FlashCards</string>
    <string name="create_deck">Create New Deck</string>
    <string name="my_decks">My Decks</string>
    <string name="quiz_mode">Quiz Mode</string>
    <string name="settings">Settings</string>
    
    <!-- Deck Management -->
    <string name="deck_name">Deck Name</string>
    <string name="deck_description">Description (optional)</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    
    <!-- Card Management -->
    <string name="add_card">Add Card</string>
    <string name="edit_card">Edit Card</string>
    <string name="card_front">Front (Question)</string>
    <string name="card_back">Back (Answer)</string>
    <string name="flip_card">Flip Card</string>
    
    <!-- Quiz Mode -->
    <string name="start_quiz">Start Quiz</string>
    <string name="next_card">Next</string>
    <string name="previous_card">Previous</string>
    <string name="show_answer">Show Answer</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="quiz_results">Quiz Results</string>
    <string name="quiz_score">Your Score: %1$d/%2$d</string>
    <string name="retry_quiz">Retry Quiz</string>
    <string name="back_to_decks">Back to Decks</string>
    
    <!-- Empty States -->
    <string name="no_decks">You don\'t have any decks yet. Create one to get started!</string>
    <string name="no_cards">This deck doesn\'t have any cards yet. Add some to start studying!</string>
    
    <!-- Confirmations -->
    <string name="confirm_delete_deck">Are you sure you want to delete this deck? This action cannot be undone.</string>
    <string name="confirm_delete_card">Are you sure you want to delete this card?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>