<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark_surface"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvQuizResultsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/quiz_results"
        android:textColor="@color/dark_on_surface"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvQuizScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:textColor="@color/dark_primary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBackToDecks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/back_to_decks"
            android:textColor="@color/dark_on_primary" />

        <Button
            android:id="@+id/btnRetryQuiz"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/retry_quiz"
            android:textColor="@color/dark_on_primary" />
    </LinearLayout>
</LinearLayout>